--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">popular-movies</string>
+    <string name="app_name">Popular Movies</string>
+    <string name="title">Title:</string>
+    <string name="rating">Rating:</string>
+    <string name="release_date">Release date:</string>
+    <string name="error_message">There was an error loading the movies.\nPlease try again!</string>
+    <string name="retry">Retry</string>
 </resources>
