--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="release_date">Release date:</string>
     <string name="error_message">There was an error loading the movies.\nPlease try again!</string>
     <string name="retry">Retry</string>
+    <string name="loading">LOADING</string>
 </resources>
