--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
     <string name="title">Title:</string>
     <string name="rating">Rating:</string>
     <string name="release_date">Release date:</string>
-    <string name="error_message">There was an error loading the movies.\nPlease try again!</string>
+    <string name="movies_error_message">There was an error loading the movies.\nPlease try again!</string>
+    <string name="reviews_error_message">There was an error loading the reviews.\nPlease try again!</string>
+    <string name="no_reviews_message">%s has no reviews yet.\nCheck back again later!</string>
     <string name="retry">Retry</string>
     <string name="loading">LOADING</string>
     <string name="reviewed_by">Reviewed by %s</string>
     <string name="see_all_reviews">See all reviews</string>
     <string name="trailers">Trailers</string>
+    <string name="overview">Overview</string>
 </resources>
