--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="most_popular_movies">Most Popular Movies</string>
+    <string name="top_rated_movies">Top Rated Movies</string>
+    <string name="favorite_movies">Favorite Movies</string>
     <string name="title">Title:</string>
     <string name="rating">Rating:</string>
     <string name="release_date">Release date:</string>
